--- a/src/app/components/surveys/survey.component.html
+++ b/src/app/components/surveys/survey.component.html
@@ -15,6 +15,6 @@
     [pageIndex]="pageIndex" 
     [pageSize]="pageSize" 
     [pageSizeOptions]="[10, 25, 50, 100]" 
-    (page)="pageEvent = onPageEvent($event)">
+    (page)="onPageEvent($event)">
   </mat-paginator>
 </div>
