--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="login-wrapper">
+        <div class="login-container">
         <div class="card login">
           <h1>Login</h1>
           <p class="text-muted">Sign In to your account</p>
@@ -44,6 +45,7 @@
         </div>
         <div *ngIf="!mobileView" class="card logo">
           <img class="companyLogo" src="../../../assets/skillamp-slim-white.png" alt="">
+        </div>
         </div>
       </div>
     </div>
