--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -39,6 +39,11 @@
     flex-direction: row;
 }
 
+.login-container {
+    display: flex; 
+    flex-direction: row;
+}
+
 .companyLogo {
     width: 250px;
     height: auto;
