--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,6 +5,11 @@
 $simple-line-font-path: "~simple-line-icons/fonts/";
 @import "~simple-line-icons/scss/simple-line-icons";
 
+// NGX-DATATABLE
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
+
 
 html, body {
     background-color: $background-color !important;
@@ -38,10 +43,17 @@ html, body {
     background-color: #D9E0E7;
 }
 
-// Data Table Customization
+// Prime NG Table
 
+.ui-helper-clearfix {
+    margin: 4px;
 
+    button {
+        float: right;
+    }
+}
 
+  
 /*ng-select component*/
 // ng-select {
 //     background-color: #ffffff !important;
