--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,8 @@
 
 // Colors
 $primary: #20a8d8;
-$secondary: #c0cadd;
+// $secondary: #c0cadd;
+$secondary: #6c757d;
 $success: #79c447;
 $danger: #ff5454;
 $warning: #fabb3d;
