--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -220,11 +220,11 @@ table th:hover {
                 border: none;
 
                 .action-button {
-                    border: 1px solid #c3c3c3; 
                     border-radius: 2px; 
                     width: 22px; 
                     height: 22px;
-                    background: linear-gradient(to top,  #f8f8f8 0%,#e8e8e8 100%);
+                    border: 1px solid $light;
+                    background: -webkit-linear-gradient(top,  #fafafa 0%,#e5e5e5 100%);                    
                     margin: 0 2px;
                     cursor: pointer;
                     user-select: none;
@@ -234,7 +234,7 @@ table th:hover {
 
                     &:hover {
                         transition: box-shadow 0.05s ease-in-out;
-                        background: -webkit-linear-gradient(top,  #fafafa 0%,#e5e5e5 100%);
+                        // background: -webkit-linear-gradient(top,  #fafafa 0%,#e5e5e5 100%);
                     }
 
                     &:active {
