Add ability to fully delete a user and all of their data

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@
 
 /* Bootstrap */
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+.btn-primary:hover:enabled, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     background-color: #434b56 !important;
 }
 
