--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -4,3 +4,7 @@ input.ng-invalid, ng-select.ng-invalid {
   border: 1px solid $danger;
   border-radius: 5px; //This is because of the ng-select field.  The red border goes around the existing border for the ng-select and doesn't replace it like it does the other inputs
 }
+
+#username {
+  text-transform: lowercase;
+}
