--- a/src/app/components/supervisor-tools/manage-users/manage-users.component.html
+++ b/src/app/components/supervisor-tools/manage-users/manage-users.component.html
@@ -3,7 +3,7 @@
         <app-table
             *ngIf="users" 
             [rows]="users" 
-            [buttonHeader]="buttonHeader"
+            [headerButton]="headerButton"
             [enableFilter]="true"
             [actionButtons]="actionButtons"
             [columns]="columns"
