--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -73,7 +73,7 @@
           </div>
           <div class="card-footer">
             <button [disabled]="!userForm.valid" type="submit" class="btn btn-primary">Save</button>
-            <button *ngIf="router.url !== '/profile'" routerLink="/supervisor_tools/manage_users" type="button" class="btn btn-secondary">Cancel</button>
+            <button *ngIf="router.url !== '/profile'" (click)="onCancel()" type="button" class="btn btn-secondary">Cancel</button>
             <button *ngIf="router.url === '/profile'" routerLink="/dashboard" type="button" class="btn btn-primary">Cancel</button>
           </div>
         </form>
